Fix panel item alignment

--- a/src/scss/_panel.scss
+++ b/src/scss/_panel.scss
@@ -1,7 +1,7 @@
 %panel {
     display: flex;
     flex-wrap: nowrap;
-    place-content: flex-start;
+    place-items: center;
 }
 
 @mixin last-margin($side, $size) {
